<resources>
    <string name="app_name">ServiceDesk</string>
    <string name="title_current_task">Current Task</string>
    <string name="title_my_task">My Task</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Loading...</string>
    <string name="emailpassword_status_fmt">EmailPasswordStatus</string>
    <string name="firebase_status_fmt">FirebaseStatus</string>

    <string name="title_map">Map</string>
    <string name="title_menu">Menu</string>
    <string name="title_activity_second">second</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="description">Текст заявки: </string>
    <string name="type_name">Тип работ: </string>
    <string name="service_name">Отдел или служба: </string>
    <string name="number_responsible_item">№ </string>
    <string name="comments">Комментарий: </string>
    <string name="change_user_name">Пользователь: </string>
    <string name="status">Статус: </string>
    <string name="change_date">Дата изменения: </string>
    <string name="request_id">Номер заявки</string>
    <string name="request_registration_date">Дата регистрации заявки</string>
    <string name="request_finish_date">Дата окончания заявки</string>
    <string name="period_of_execution">Срок выполнения заявки</string>
    <string name="status_of_request">Статус заявки</string>
    <string name="accepted_the_request">Заявку принял</string>
    <string name="declarer">Заявитель</string>
    <string name="subdivision">Подразделение</string>
    <string name="data_about_declarer">Данные о заявителе</string>
    <string name="text_of_request">Текст заявки</string>
    <string name="responsible_for_the_execution_of_the_request">Ответственные по исполнению заявки</string>
    <string name="address">Местонахождение(адрес)</string>
    <string name="number_of_cabinet">Номер комнаты (кабинета)</string>
    <string name="application_executors_department">Отдел(исполнителей заявки)</string>
    <string name="full_name_of_executor">ФИО исполнителя</string>
    <string name="request_registration">Заявку зарегистрировал</string>
    <string name="type_of_request">Тип заявки</string>
    <string name="actions_over_request">Действия по заявке</string>
    <string name="evaluation_on_the_implementation_of_the_application">Оценки по выполнению заявки</string>
    <string name="change_log">Журнал изменений</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="coming_soon">В скором времени…</string>
    <string name="global_search_title">Search</string>
    <string name="search">Поиск</string>
    <string name="searching">Поиск…</string>
    <string name="category_of_work">Категория работ</string>
    <string name="work_on_request_completed">Работы по заявке выполнены</string>
    <string name="expand">Расширить</string>
    <string name="partially">Частично</string>
    <string name="fully">Полностью</string>
    <string name="save">Сохранить</string>

    <string-array name="change_logs_string_list">
        <item>Ответственные по исполнению заявки</item>
        <item>Исполнители</item>
        <item>Жизненный цикл заявки</item>
    </string-array>

    <string-array name="statuses_my_tasks">
        <item>Все заявки</item>
        <item>Все не закрытые заявки</item>
        <item>Новые</item>
        <item>Выполненные</item>
        <item>Выполняемые</item>
        <item>Отмененные</item>
        <item>Приостановленные</item>
        <item>Закрытые</item>
    </string-array>

    <string-array name="statuses_current_tasks">
        <item>Все не закрытые заявки</item>
        <item>Новые</item>
        <item>Выполненные</item>
        <item>Выполняемые</item>
        <item>Отмененные</item>
        <item>Приостановленные</item>
    </string-array>

    <string-array name="type_request">
        <item> </item>
        <item>Устная</item>
        <item>Письменная</item>
        <item>Телефонная</item>
        <item>Email заявка</item>
        <item>Web заявка</item>
    </string-array>

    <string-array name="status_of_request_for_global_search">
        <item> </item>
        <item>Новые</item>
        <item>Выполненные</item>
        <item>Выполняемые</item>
        <item>Закрытые</item>
        <item>Отмененные</item>
        <item>Приостановленные</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
