<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_current_task"
        android:icon="@drawable/assignment_24px_1"
        android:title="@string/title_current_task" />

    <item
        android:id="@+id/navigation_my_task"
        android:icon="@drawable/assignment_ind_24px"
        android:title="@string/title_my_task" />

    <item
        android:id="@+id/navigation_global_search"
        android:icon="@drawable/search_24px"
        android:title="@string/global_search_title" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/place_24px"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/menu_24px"
        android:title="@string/title_menu" />

</menu>
