<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-95dp"
        tools:layout_editor_absoluteY="-271dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:id="@+id/request_number_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/request_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_id"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/request_registration_date_id_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_number_block"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/request_registration_date_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/request_registration_date"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/request_registration_date_id_edit_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="C (гггг-мм-дд)">

                </EditText>

                <EditText
                    android:id="@+id/request_registration_date_id_edit_finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="До (гггг-мм-дд)">

                </EditText>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/declarer_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_registration_date_id_block"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/declarer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/declarer">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/subdivision_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/declarer_block"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/subdivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subdivision"></EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subdivision_block"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"></EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/number_of_cabinet_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_block"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/number_of_cabinet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_cabinet"></EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/application_executors_department_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/number_of_cabinet_block"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_executors_department"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/application_executors_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/full_name_of_executor_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/application_executors_department_block"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_of_executor"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/full_name_of_executor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_of_request_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name_of_executor_block"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_of_request"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/status_of_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/request_registration_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status_of_request_block"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_registration"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/request_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/type_of_request_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_registration_block"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_request"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/type_of_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_of_request_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_of_request_block"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_of_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_of_request"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_button_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_of_request_block"
                android:orientation="vertical">

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClick"
                    android:text="Поиск" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>